--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -52,6 +52,6 @@ rds_engine_version: "14.3"
 rds_master_password: L#5cH2mgy_
 rds_master_user: ansible
 
-image_filter: Fedora-Cloud-Base-35-*
+image_filter: RHEL-9.2.0_HVM-*
 
 operation: create
