Change instance type fro t to t4g ARM64

--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -16,7 +16,7 @@ sshkey_pair_name: "{{ resource_prefix }}-key"
 
 bastion_host_name: "{{ resource_prefix }}-bastion"
 bastion_host_username: fedora
-bastion_host_type: t2.xlarge
+bastion_host_type: t4g.xlarge
 bastion_host_required_packages:
   - python3
   - python-virtualenv
@@ -27,7 +27,7 @@ bastion_host_required_packages:
   - ansible
 bastion_host_venv_path: ~/env
 
-workers_instance_type: t2.large
+workers_instance_type: t4.large
 workers_user_name: fedora
 number_of_workers: 2
 
