--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -53,5 +53,6 @@ rds_master_password: L#5cH2mgy_
 rds_master_user: ansible
 
 image_filter: Fedora-Cloud-Base-35-*
+image_arch: ARM64
 
 operation: create
