--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -53,6 +53,6 @@ rds_master_password: L#5cH2mgy_
 rds_master_user: ansible
 
 image_filter: Fedora-Cloud-Base-35-*
-image_arch: ARM64
+image_arch: arm64
 
 operation: create
